# Lab4BigData

./: .env.example  .gitattributes  .gitignore  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  myst.yml  pyproject.toml
.github/workflows/: pages.yml
book/: architecture.ipynb  index.md  task1_repository.ipynb  task2_parser.ipynb  task3_kafka.ipynb  task4_neo4j.ipynb  task5_mongodb.ipynb  task6_replay.ipynb
cpg_parser/: __init__.py  analyzer.py  cli.py  constants.py  discovery.py  ids.py  manifest.py  models.py  publisher.py  service.py
evidence/runtime/: optimum-replay.diff  verification.json
infra/connect/: Dockerfile  neo4j-sink-config.json  register-wait.sh  register.sh
infra/kafka/: create-topics.sh
infra/neo4j/: init.cypher
schemas/: edge-event.schema.json  error-event.schema.json  metadata-event.schema.json  node-event.schema.json  replay-evidence.schema.json
scripts/: bootstrap-optimum.ps1  capture_replay_evidence.py  generate_book.py  parse-optimum.ps1  run-fixture.ps1  stack.ps1  validate_notebooks.py  verify-optimum.ps1  verify-stack.ps1
spark_jobs/: metadata_to_mongo.py
tests/: test_analyzer.py  test_discovery.py  test_evidence.py  test_manifest.py  test_service.py
tests/fixtures/invalid_repo/: broken.py
tests/fixtures/sample_repo/: app.py  generated_pb2.py
