[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab04-cpg-streaming"
version = "1.0.0"
description = "Incremental Python CPG to Kafka, Neo4j, and MongoDB"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.6,<3"]
test = ["pytest>=8,<9", "jsonschema>=4,<5"]
book = ["jupyter-book>=2,<3", "nbformat>=5,<6", "nbclient>=0.10,<1"]

[project.scripts]
cpg-parser = "cpg_parser.cli:main"

[tool.setuptools.packages.find]
include = ["cpg_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

